--- a/noval.html
+++ b/noval.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="col">
           <div class="jumbotron flex-grow-0 flex-shrink-1" id="imgContainer">
-			<embed src="assets/manga/GoS/script.pdf" width="800px" height="700px" />
+		<iframe src="assets/manga/GoS/script.pdf" width="800px" height="700px" frameborder="0"></iframe>
           </div>
         </div>
       </div>
