--- a/pages.html
+++ b/pages.html
@@ -28,7 +28,7 @@
 			<script>
 				let img = "";
 				for (let i = 1; i <= 34; i++) {
-				  img += "<img src='assets/manga/GoS/img/"+ i +".jpeg'  class='center' />";
+				  img += "<img src='assets/manga/GoS/img/"+ i +".jpg'  class='center' />";
 				}
 				document.getElementById("imgContainer").innerHTML = img;
 			</script>
