--- a/pages.html
+++ b/pages.html
@@ -48,31 +48,27 @@
 	
 	
   <div class="d-flex h-100 align-items-center">
-    <div class="container">
+    <div class="container bg-light">
       <div class="row">
         <div class="col">
           <div class="jumbotron flex-grow-0 flex-shrink-1" id="imgContainer">
-		  <div id="p1">
-			<script>
-				let img = "";
-				for (let i = 1; i <= 34; i++) {
-				  img += "<img src='assets/manga/GoS/img/p1/"+ i +".jpg'  class='center' />";
-				}
-			</script>
-		  </div>
-		  <div id="p2">
-			<script>
-				for (let i = 1; i <= 26; i++) {
-				  img += "<img src='assets/manga/GoS/img/p2/"+ i +".jpg'  class='center' />";
-				}
-			</script>
-		  </div>
 		  <script>
-				document.getElementById("imgContainer").innerHTML = img;
-		  </script>
-			
-			<hr>
-			<p> قريبا : يتبع في الجزء 3 </p>
+			let img = "";
+			  
+			img += "<div id='p1'> </div>";
+			for (let i = 1; i <= 34; i++) {
+			  img += "<img src='assets/manga/GoS/img/p1/"+ i +".jpg'  class='center' />";
+			}
+
+			img += "<div id='p2'> </div>";
+			for (let i = 1; i <= 26; i++) {
+			  img += "<img src='assets/manga/GoS/img/p2/"+ i +".jpg'  class='center' />";
+			}
+			  document.getElementById("imgContainer").innerHTML = img;
+		</script>
+
+		<hr>
+		<p> قريبا : يتبع في الجزء 3 </p>
           </div>
         </div>
       </div>
