--- a/pages.html
+++ b/pages.html
@@ -15,7 +15,7 @@
 			}
 		</style>
 </head>
-<body style="text-align:center;" dir="rtl">
+<body style="text-align:center; background-color:#DCDCDC;"  dir="rtl">
 	<section class="d-flex mse spacer" id="hero">
     <div id="hero-top"></div>
     <div id="hero-bottom"></div>
@@ -57,12 +57,12 @@
 			  
 			img += "<div id='p1'> </div>";
 			for (let i = 1; i <= 34; i++) {
-			  img += "<img src='assets/manga/GoS/img/p1/"+ i +".jpg'  class='center' />";
+			  img += "<img src='assets/manga/GoS/img/p1/"+ i +".jpg'  class='center border border-dark' />";
 			}
 
 			img += "<div id='p2'> </div>";
 			for (let i = 1; i <= 26; i++) {
-			  img += "<img src='assets/manga/GoS/img/p2/"+ i +".jpg'  class='center' />";
+			  img += "<img src='assets/manga/GoS/img/p2/"+ i +".jpg'  class='center border border-dark' />";
 			}
 			  document.getElementById("imgContainer").innerHTML = img;
 		</script>
