--- a/pages.html
+++ b/pages.html
@@ -48,7 +48,7 @@
 	
 	
   <div class="d-flex h-100 align-items-center">
-    <div class="container bg-light">
+    <div class="container">
       <div class="row">
         <div class="col">
           <div class="jumbotron flex-grow-0 flex-shrink-1" id="imgContainer">
