update the header

--- a/pages.html
+++ b/pages.html
@@ -94,7 +94,7 @@
 				<a class="nav-link" href="javascript:p2()">الثاني</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link disabled" href="#p3">الثالث</a>
+				<a class="nav-link" href="javascript:p3()">الثالث</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link disabled" href="#p4">الرابع</a>
