--- a/pages.html
+++ b/pages.html
@@ -100,7 +100,7 @@
 				<a class="nav-link disabled" href="#p4">الرابع</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link disabled" href="#p5">الخامس والأخير</a>
+				<a class="nav-link disabled" href="#p5">الأخير</a>
 			  </li>
 		</ul>
 		<a class="nav-link text-light" href="https://tshi-for-games.github.io/T4G/">الرئيسية</a>
